2008-07-09  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules: added "yelp-webkit" from dedicated
	branch on svn.gnome.org.

2008-07-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.24.modules: updated vala to pull a tarball; as it
	needs itself to build from subversion.

2008-07-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-keyring branched for
	2.22.

2008-07-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/sanitycheck.py, jhbuild/utils/cmds.py,
	jhbuild/versioncontrol/svn.py: added workaround against new default
	interactive behaviour of subversion 1.5.

2008-07-01  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* doc/C/jhbuild.xml: Document the "list -a" option.

2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/commands/base.py (cmd_list.__init__): Add an option to
	list all modules.

	* contrib/jhbuild_completion.bash: Propose all modules for the
	completion.  Fixes: #540706

2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/versioncontrol/git.py (GitBranch._update): Also stash
	uncommitted changes for normal git, it's so nice.

2008-06-29  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* modulesets/gnome-suites-2.22.modules: gnome-python-desktop in
	2.22 branch now uses a local waf 1.3.2 provided in the repository.
	Fixes #538673.

2008-06-28  Diego Escalante Urrelo  <diegoe@gnome.org>

	* modulesets/gnome-2.24.modules: Fix pyclutter and clutter-vala svn paths.

2008-06-27  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules: Added libcanbbera.

2008-06-27  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/pulseaudio.modules: Removed gst-pulse (moved to
	gst-plugins-good), switch the repositories to the new Git
	location.

2008-06-26  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/online-desktop-modules: Remove more cut-pasted modules.
