@@ -92,6 +92,11 @@
 	id		CDATA	#REQUIRED
 	makeargs	CDATA	#IMPLIED>
 
+<!ELEMENT ant (branch?,dependencies?,after?)>
+<!ATTLIST ant
+	id		CDATA	#REQUIRED
+	makeargs	CDATA	#IMPLIED>
+
 <!ELEMENT testmodule (branch?,dependencies?,after?,testedmodules?)>
 <!ATTLIST testmodule
 	id		CDATA	#REQUIRED
