@@ -1,3 +1,9 @@
+2008-07-13  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/ant.py, modulesets/moduleset.dtd, doc/C/jhbuild.xml:
+	added support for the Ant build tool.  (initial patch by David Schleef,
+	closes: #537037)
+
 2008-07-09  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-2.24.modules: added "yelp-webkit" from dedicated
